fixed gap under blue border in spotlight

--- a/src/App.css
+++ b/src/App.css
@@ -1526,7 +1526,7 @@ input, select, textarea {
 		background-position: center 60px;
 		background-size: cover;
 		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
-		height: 68.6vh;
+		height: 69vh;
 		border-style: solid;
 		border-color: #5480f1 !important;
 		border-bottom-width: 0.48em !important;
